# SEAL-FYP-Logistic-Regression

./: .3_levels.cpp.swp  .gitignore  1_bfv.cpp  2_encoders.cpp  3_levels.cpp  4_ckks.cpp  5_rotation.cpp  CMakeLists.txt  README.md  benchmark.cpp  benchmark2.cpp  canvas.html  canvas_4096.html  canvas_test.html  clientdemo.cpp  dot_product.cpp  fyp_helper.h  helper.h  horner.cpp  linear_transf_plot_p8192_d2000.py  linear_transformation.cpp  linear_transformation2.cpp  logistic_regression.cpp  logistic_regression_ckks.cpp  logistic_regression_test.cpp  matrix_mult_benchmark.cpp  matrix_multiplication.cpp  matrix_ops.cpp  matrix_transpose.cpp  polynomial.cpp  pulsar_stars.csv  script_4096.p  sealdemo1.cpp  serverdemo.cpp  vector_ops.cpp
