cmake_minimum_required(VERSION 3.10)
project(SEALDemo VERSION 1.0)
add_executable(1_bfv 1_bfv.cpp)
add_executable(2_encoders 2_encoders.cpp)
add_executable(3_levels 3_levels.cpp)
add_executable(4_ckks 4_ckks.cpp)
add_executable(5_rotation 5_rotation.cpp)
add_executable(vector_ops vector_ops.cpp)
add_executable(benchmark benchmark.cpp)
add_executable(benchmark2 benchmark2.cpp)
add_executable(matrix_ops matrix_ops.cpp)
add_executable(dot_product dot_product.cpp)

find_package(SEAL)
target_link_libraries(1_bfv SEAL::seal)
target_link_libraries(2_encoders SEAL::seal)
target_link_libraries(3_levels SEAL::seal)
target_link_libraries(4_ckks SEAL::seal)
target_link_libraries(5_rotation SEAL::seal)
target_link_libraries(vector_ops SEAL::seal)
target_link_libraries(benchmark SEAL::seal)
target_link_libraries(benchmark2 SEAL::seal)
target_link_libraries(matrix_ops SEAL::seal)
target_link_libraries(dot_product SEAL::seal)
